--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
+    "firebase": "^12.0.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
