--- a/frontend/firebase-rules.json
+++ b/frontend/firebase-rules.json
@@ -7,6 +7,10 @@
     "notifications": {
       ".read": true,
       ".write": true
+    },
+    "productos": {
+      ".read": true,
+      ".write": true
     }
   }
 } 
