--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^6.0.0",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "firebase": "^12.0.0",
