Fix: Corregidos problemas del panel mayorista - Agregadas reglas Firebase para pedidos/movimientos - Mejorado manejo de autenticación - Agregado componente DebugAuth - Corregida inconsistencia de IDs en productos

--- a/frontend/firebase-rules.json
+++ b/frontend/firebase-rules.json
@@ -24,6 +24,30 @@
         ".write": true
       }
     },
+    "pedidos": {
+      ".read": "auth != null",
+      ".write": "auth != null",
+      "$pedidoId": {
+        ".read": "auth != null",
+        ".write": "auth != null"
+      }
+    },
+    "movimientos": {
+      ".read": "auth != null",
+      ".write": "auth != null",
+      "$movimientoId": {
+        ".read": "auth != null",
+        ".write": "auth != null"
+      }
+    },
+    "inventario_movimientos": {
+      ".read": "auth != null",
+      ".write": "auth != null",
+      "$movimientoId": {
+        ".read": "auth != null",
+        ".write": "auth != null"
+      }
+    },
     "users": {
       ".read": "auth != null",
       ".write": "auth != null",
