Corregido sistema de reseñas - Conectada página de reseñas con Firebase - Agregadas reglas de Firebase para reseñas - Implementada pestaña de reseñas en panel admin - Corregido envío automático al tocar estrellas - Agregado loading state y validaciones

--- a/frontend/firebase-rules.json
+++ b/frontend/firebase-rules.json
@@ -55,6 +55,14 @@
         ".read": "auth != null && auth.uid == $userId",
         ".write": "auth != null && auth.uid == $userId"
       }
+    },
+    "reseñas": {
+      ".read": "auth != null",
+      ".write": "auth != null",
+      "$reseñaId": {
+        ".read": "auth != null",
+        ".write": "auth != null"
+      }
     }
   }
 } 
