Corregidas reglas de Firebase para reseñas - Permitido acceso público para crear reseñas - Resuelto error PERMISSION_DENIED para usuarios no autenticados

--- a/frontend/firebase-rules.json
+++ b/frontend/firebase-rules.json
@@ -57,11 +57,11 @@
       }
     },
     "reseñas": {
-      ".read": "auth != null",
-      ".write": "auth != null",
+      ".read": true,
+      ".write": true,
       "$reseñaId": {
-        ".read": "auth != null",
-        ".write": "auth != null"
+        ".read": true,
+        ".write": true
       }
     }
   }
